--- a/index.html
+++ b/index.html
@@ -85,23 +85,23 @@
                 <div class="row">
 
                     <div class="col-sm text-center">
-                        <img src="/img/palestrantes/arredondado/palestrante1a.png" alt="palestrante1"
-                            class="rounded-circle">
+                        <img src="/img/palestrantes/arredondado/Thiago.png" alt="Thiago" class="rounded-circle">
                         <p>Thiago Piton</p>
                     </div>
                     <div class="col-sm text-center">
-                        <img src="/img/palestrantes/arredondado/WhatsApp Image 2019-10-22 at 17.02.10.png"
-                            alt="palestrante1" class="rounded-circle bg-primary">
+                        <img src="/img/palestrantes/arredondado/Maira.png" alt="Maira"
+                            class="rounded-circle bg-primary">
                         <p>Maira Rabelo</p>
                     </div>
-                    <!-- <div class="col-sm text-center">
-                    <img src="/img/palestrante1.jpg" alt="palestrante1" class="rounded-circle">
-                    <p>Palestrante 3</p>
-                </div> -->
-                    <!-- <div class="col-sm text-center">
-                    <img src="/img/palestrante1.jpg" alt="palestrante1" class="rounded-circle">
-                    <p>Palestrante 4</p>
-                </div> -->
+                    <div class="col-sm text-center">
+                        <img src="/img/palestrantes/arredondado/Adriano.png" alt="Adriano" class="rounded-circle">
+                        <p>Adriano Jesus</p>
+                    </div>
+
+                    <div class="col-sm text-center">
+                        <img src="/img/palestrantes/arredondado/Karina.png" alt="Karina" class="rounded-circle">
+                        <p>Karina Nunes</p>
+                    </div> -->
 
                 </div>
 
@@ -114,6 +114,10 @@
                     </div>
 
                     <div class="col-sm text-center">
+                        <img src="/img/patrocinadores/GLOBAL.png" alt="patrocinio" class="bg-white">
+                    </div>
+
+                    <div class="col-sm text-center">
                         <img src="/img/patrocinadores/AF_Oxigenio_Traco_Neg_RGB@2x.png" alt="patrocinio"
                             class="rounded-circle">
 
@@ -121,6 +125,11 @@
                     <div class="col-sm text-center">
                         <img src="/img/patrocinadores/logo moa@2x.png" alt="patrocinio" class="rounded-circle">
                     </div>
+                    <div class="col-sm text-center">
+                        <img src="/img/patrocinadores/Shekinah.png" alt="patrocinio" class="bg-white">
+                    </div>
+
+
 
                     <div class="col-sm text-center">
 
@@ -167,7 +176,7 @@
             </div>
             <div class="media d-flex flex-wrap text-justify">
                 <img class="align-self-center mr-3 img-fluid d-none d-sm-block"
-                    src="img/palestrantes/quadrado/Foto thiago.png" alt="Imagem de exemplo genérica">
+                    src="img/palestrantes/quadrado/Foto thiago.png" alt="Thiago Piton">
                 <div class="media-body">
                     <h5 class="mt-0">Thiago Piton</h5>
                     <p>Thiago é Ceo na Agência Padme e especialista em varejo virtual e pulverização de produtos.
@@ -196,37 +205,59 @@
                     </p>
                 </div>
                 <img class="align-self-center ml-3 img-fluid d-none d-sm-block"
-                    src="img/palestrantes/quadrado/Maira.jpg" alt="Generic placeholder image">
+                    src="img/palestrantes/quadrado/Maira.jpg" alt="Maira Rabelo">
             </div>
 
-            <!-- PALESTRANTE 3 -->
-            <!-- <div class="media my-4 flex-wrap text-center">
-            <img class="mr-3 img-fluid d-none d-sm-block" src="img/imagem3.png" alt="Generic placeholder image">
-            <div class="media-body ">
-                <h5 class="mt-0">Media heading</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
-                purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
-                vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <!-- PALESTRANTE 4 -->
+            <div class="text-center my-5">
             </div>
-        </div> -->
+            <div class="media d-flex flex-wrap text-justify">
+                <img class="align-self-center mr-3 img-fluid d-none d-sm-block"
+                    src="img/palestrantes/quadrado/Adriano.png" alt="Adriano Jesus">
+                <div class="media-body">
+                    <h5 class="mt-0">Adriano Jesus</h5>
+                    <p>Master em Marketing e Vendas pela Laureate University, Bacharel em Marketing pela universidade
+                        Anhembi Morumbi em 2015, Adriano atua como Digital Sales Strategy em uma Seguradora
+                        Multinacional há seis anos.
+                        Já atuou em projetos de treinamento de vendas em grandes varejistas pelo Brasil, ministrou
+                        palestras sobre vendas, customer experience, estratégias de marketing Digital (Inbound e SEO) e
+                        ministrou o curso de Marketing Digital & Redes Sociais na Prática pela Competency do Brasil.
+                        Recentemente fez um curso de formação em Marketing Digital de Alta Performance e, atualmente,
+                        trabalha na seguradora com projetos de implantação de Crosschannel em canais digitais em
+                        varejistas, empresas de telecom e montadoras além de responsável pelo time de vendas do call
+                        center.
+                        Também escreve para o blog da Competency do Brasil sobre educação e internacionalização de
+                        carreiras.
+                    </p>
 
-        </div>
+                </div>
 
-        <div class="container my-5" id="formulario">
-            <h3 class="text-center">Compre seu ingresso!</h3>
-            <div class="embed-responsive embed-responsive-1by1">
-                <div id="sympla-widget-689780" height="auto"></div>
-                <script src="https://www.sympla.com.br/js/sympla.widget-pt.js/689780"></script>
-            </div>
-        </div>
+                <!-- PALESTRANTE 3 -->
+                <div class="media my-4 flex-wrap text-justify">
+                    <div class="media-body">
+                        <h5 class="mt-0 mb-1">Karina Nunes</h5>
+                        <p>Coach de Negócio
+                            Atua com empresários que querem leavar sua empresa para o próximo nível de uma maneira
+                            saudavél
+                            e estruturada, garantido assim.Resultados e a Sustentabilidade do seu negócio
+                        </p>
+                    </div>
+                    <img class="align-self-center ml-3 img-fluid d-none d-sm-block"
+                        src="img/palestrantes/quadrado/Karina.png" alt="Karina Nunes">
+                </div>
+
+                <div class="container my-5" id="formulario">
+                    <h3 class="text-center">Compre seu ingresso!</h3>
+                    <div class="embed-responsive embed-responsive-1by1">
+                        <div id="sympla-widget-689780" height="auto"></div>
+                        <script src="https://www.sympla.com.br/js/sympla.widget-pt.js/689780"></script>
+                    </div>
+                </div>
 
     </main>
     <footer class="container my-5">
 
     </footer>
-
-
-
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
